@@ -22,11 +22,23 @@
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
+plugins {
+	id 'jacoco'
+}
+
 repositories {
 	maven {
 		url = 'https://repo.runelite.net'
 	}
 	mavenCentral()
+}
+
+sourceSets {
+	testCore {
+	}
+	testPlugin {
+		compileClasspath += sourceSets.testCore.output
+	}
 }
 
 dependencies {
@@ -35,6 +47,8 @@ dependencies {
 	implementation "com.google.guava:guava:23.2-jre"
 	implementation "org.ow2.asm:asm:9.9.1"
 	implementation "com.google.code.gson:gson:2.8.5"
+
+	testImplementation "junit:junit:4.12"
 
 	def lombok = "org.projectlombok:lombok:1.18.30"
 	compileOnly lombok
@@ -47,3 +61,41 @@ compileJava.options.compilerArgs += [
 	"--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
 	"--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
 ]
+
+task testCoreJar(type: Jar) {
+	archiveBaseName.set("test-core")
+	from sourceSets.testCore.output
+}
+
+def testClassApiFile = project.layout.buildDirectory.file("testCoreApi").get().asFile
+
+task testCoreApi(type: JavaExec) {
+	inputs.file(tasks.testCoreJar.archiveFile)
+	outputs.file(testClassApiFile)
+	classpath = sourceSets.main.runtimeClasspath
+	mainClass = "net.runelite.pluginhub.apirecorder.ClassRecorder"
+	args = [testClassApiFile, tasks.testCoreJar.archiveFile.get().asFile]
+}
+
+test {
+	inputs.files(tasks.testCoreApi.outputs)
+	inputs.files(sourceSets.testPlugin.allSource)
+
+	jvmArgs += [
+		"--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+		"--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+	]
+
+	setSystemProperties([
+		"runelite.apirecorder.test.classpath": sourceSets.testPlugin.compileClasspath.files.join(File.pathSeparator),
+		"runelite.apirecorder.test.sourcepath": sourceSets.testPlugin.allJava.files.join(File.pathSeparator),
+	])
+}
+
+tasks.jacocoTestReport {
+	dependsOn(tasks.test)
+	reports {
+		xml.required = true
+		html.required = true
+	}
+}
